pugs (6.2.7-1) experimental; urgency=low

  * New upstream version.

 -- Florian Ragwitz <rafl@fsfe.org>  Wed,  6 Jul 2005 05:14:39 +0200

pugs (6.2.6-1) experimental; urgency=low

  * New upstream version.

 -- Carey Tilden <revdiablo@wd39.com>  Thu, 02 Jun 2005 15:39:16 -0700

pugs (6.2.5-1) experimental; urgency=low

  * New upstream version.

 -- Carey Tilden <revdiablo@wd39.com>  Mon, 23 May 2005 17:18:35 -0700

pugs (6.2.4-1) experimental; urgency=low

  * New upstream version.

 -- Carey Tilden <revdiablo@wd39.com>  Mon, 23 May 2005 17:18:35 -0700

pugs (6.2.3-1) experimental; urgency=low

  * New upstream version.

 -- Ingo Blechschmidt <iblech@web.de>  Do, 12 Mai 2005 18:04:06 +0200

pugs (6.2.2-1) experimental; urgency=low

  * New upstream version.

 -- Carey Tilden <revdiablo@wd39.com>  Wed, 11 May 2005 10:04:58 -0700

pugs (6.2.1-1) experimental; urgency=low

  * New upstream version.

 -- Shu-Chun Weng <scw@csie.org>  Sun, 24 Apr 2005 13:43:16 +0800

pugs (6.2.0-1) experimental; urgency=low

  * New upstream version.

 -- Shu-Chun Weng <scw@csie.org>  Wed, 13 Apr 2005 13:49:36 +0800

pugs (6.0.14-1) experimental; urgency=low

  * New upstream version.

 -- Shu-Chun Weng <scw@csie.org>  Mon, 04 Apr 2005 14:11:26 +0800

pugs (6.0.13-1) experimental; urgency=low

  * New upstream version.

 -- Shu-Chun Weng <scw@csie.org>  Sun, 27 Mar 2005 15:34:45 +0800

pugs (6.0.12-1) experimental; urgency=low

  * Initial Release.

 -- Shu-Chun Weng <scw@csie.org>  Sat, 26 Mar 2005 21:57:52 +0800
